force-app/main/default/objects/Factura__c/fields/Contacto_de_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Contacto_de_Cobranza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto de Cobranza</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>