force-app/main/default/objects/Factura__c/fields/Correo_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Correo_de_Contacto__c</fullName>
    <label>Correo de Contacto</label>
    <type>Email</type>
</CustomField>