force-app/main/default/objects/Factura__c/fields/Debe__c.field-meta.xml
<CustomField>
    <fullName>Debe__c</fullName>
    <label>Debe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>