force-app/main/default/objects/Factura__c/fields/Descripcion_10__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_10__c</fullName>
    <label>Descripción 10</label>
    <length>70</length>
    <type>Text</type>
</CustomField>