force-app/main/default/objects/Factura__c/fields/Descripcion_3__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_3__c</fullName>
    <label>Descripción 3</label>
    <length>70</length>
    <type>Text</type>
</CustomField>