force-app/main/default/objects/Factura__c/fields/Descripcion_4__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_4__c</fullName>
    <label>Descripción 4</label>
    <length>70</length>
    <type>Text</type>
</CustomField>