force-app/main/default/objects/Factura__c/fields/Descripcion_Exenta__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Exenta__c</fullName>
    <label>Descripción Exenta</label>
    <length>70</length>
    <type>Text</type>
</CustomField>