force-app/main/default/objects/Factura__c/fields/Descripcion_Factura__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Factura__c</fullName>
    <label>Descripción 2</label>
    <length>70</length>
    <type>Text</type>
</CustomField>