force-app/main/default/objects/Factura__c/fields/Dias_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Pago__c</fullName>
    <formula>IF( not isnull(Fecha_Pago__c), Fecha_Pago__c-Fecha_Emision__c ,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Días transcurridos desde la emisión de la factura hasta recibir el pago</inlineHelpText>
    <label>Días de Pago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>