force-app/main/default/objects/Factura__c/fields/Dias_Vencidos__c.field-meta.xml
<CustomField>
    <fullName>Dias_Vencidos__c</fullName>
    <formula>TODAY() - Fecha_Emision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Vencidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>