force-app/main/default/objects/Factura__c/fields/Documento_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Documento_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documento Relacionado</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>