force-app/main/default/objects/Factura__c/fields/Email_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Email_Contacto__c</fullName>
    <formula>Contacto_de_Cobranza__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Contacto</label>
    <type>Text</type>
</CustomField>