force-app/main/default/objects/Factura__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Cobrar</fullName>
                <default>true</default>
                <label>Por Cobrar</label>
            </value>
            <value>
                <fullName>Pagada</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
            <value>
                <fullName>Anulada NC</fullName>
            </value>
            <value>
                <fullName>Incobrable Otros</fullName>
            </value>
            <value>
                <fullName>Incobrable Dicom</fullName>
            </value>
            <value>
                <fullName>Abonada</fullName>
            </value>
            <value>
                <fullName>Rechazada SII</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>