force-app/main/default/objects/Factura__c/fields/Factura_Generada__c.field-meta.xml
<CustomField>
    <fullName>Factura_Generada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factura Generada</label>
    <type>Checkbox</type>
</CustomField>