force-app/main/default/objects/Factura__c/fields/Fecha_Comprometida_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Comprometida_de_Pago__c</fullName>
    <label>Fecha Comprometida de Pago</label>
    <type>Date</type>
</CustomField>