force-app/main/default/objects/Factura__c/fields/Fecha_Emision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Emision__c</fullName>
    <label>Fecha Emisión</label>
    <type>Date</type>
</CustomField>