force-app/main/default/objects/Factura__c/fields/Fecha_Pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Pago__c</fullName>
    <label>Fecha Pago</label>
    <type>Date</type>
</CustomField>