force-app/main/default/objects/Factura__c/fields/Fecha_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento__c</fullName>
    <formula>Fecha_Emision__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>