force-app/main/default/objects/Factura__c/fields/Haber__c.field-meta.xml
<CustomField>
    <fullName>Haber__c</fullName>
    <label>Haber</label>
    <summarizedField>Ajuste__c.Monto__c</summarizedField>
    <summaryForeignKey>Ajuste__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>