force-app/main/default/objects/Factura__c/fields/ID_Documento__c.field-meta.xml
<CustomField>
    <fullName>ID_Documento__c</fullName>
    <label>ID Documento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>