force-app/main/default/objects/Factura__c/fields/Informacion_Factura__c.field-meta.xml
<CustomField>
    <fullName>Informacion_Factura__c</fullName>
    <label>Descripción 1</label>
    <length>70</length>
    <type>Text</type>
</CustomField>