force-app/main/default/objects/Factura__c/fields/Iva__c.field-meta.xml
<CustomField>
    <fullName>Iva__c</fullName>
    <label>Iva</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Documento__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0.19</fullName>
                <default>true</default>
                <label>0.19</label>
            </value>
            <value>
                <fullName>EXENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>