force-app/main/default/objects/Factura__c/fields/N_HES__c.field-meta.xml
<CustomField>
    <fullName>N_HES__c</fullName>
    <label>N° HES</label>
    <length>20</length>
    <type>Text</type>
</CustomField>