force-app/main/default/objects/Factura__c/fields/N_OC__c.field-meta.xml
<CustomField>
    <fullName>N_OC__c</fullName>
    <label>Nº OC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>