force-app/main/default/objects/Factura__c/fields/Pdf_Base64__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Base64__c</fullName>
    <label>Pdf Base64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>