force-app/main/default/objects/Factura__c/fields/Precio10__c.field-meta.xml
<CustomField>
    <fullName>Precio10__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>