force-app/main/default/objects/Factura__c/fields/Precio2__c.field-meta.xml
<CustomField>
    <fullName>Precio2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>