force-app/main/default/objects/Factura__c/fields/Precio_Exento__c.field-meta.xml
<CustomField>
    <fullName>Precio_Exento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio Exento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>