force-app/main/default/objects/Factura__c/fields/Propuesta__c.field-meta.xml
<CustomField>
    <fullName>Propuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propuesta</label>
    <referenceTo>Propuesta__c</referenceTo>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>