force-app/main/default/objects/Factura__c/fields/PRUEBA__c.field-meta.xml
<CustomField>
    <fullName>PRUEBA__c</fullName>
    <description>CAMPO DE PRUEBA PARA CAPACITACION</description>
    <inlineHelpText>INGRESE POR FAVOR UN TEXTO</inlineHelpText>
    <label>PRUEBA</label>
    <type>TextArea</type>
</CustomField>