force-app/main/default/objects/Factura__c/fields/RUT__c.field-meta.xml
<CustomField>
    <fullName>RUT__c</fullName>
    <formula>Cuenta__r.RUT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RUT</label>
    <type>Text</type>
</CustomField>