force-app/main/default/objects/Factura__c/fields/RUT_Interno__c.field-meta.xml
<CustomField>
    <fullName>RUT_Interno__c</fullName>
    <label>RUT Interno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>78445790-7</fullName>
                <label>Cargo Entrega S.A.</label>
            </value>
            <value>
                <fullName>99537600-8</fullName>
                <label>HotExpress S.A.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>