force-app/main/default/objects/Factura__c/fields/Rut_Persona__c.field-meta.xml
<CustomField>
    <fullName>Rut_Persona__c</fullName>
    <label>Rut Persona</label>
    <length>11</length>
    <type>Text</type>
</CustomField>