force-app/main/default/objects/Factura__c/fields/Telefono_Contacto2__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Contacto2__c</fullName>
    <label>Teléfono Contacto</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>