force-app/main/default/objects/Factura__c/fields/Telefono_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Contacto__c</fullName>
    <formula>Contacto_de_Cobranza__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono Contacto</label>
    <type>Text</type>
</CustomField>