force-app/main/default/objects/Factura__c/fields/Tipo_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Factura__c</fullName>
    <label>Tipo de Factura</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Extranjera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>