force-app/main/default/objects/Factura__c/fields/Tipo_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Servicio__c</fullName>
    <label>Tipo de Servicio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMPORT</fullName>
            </value>
            <value>
                <fullName>EXPORT</fullName>
            </value>
            <value>
                <fullName>CARGO</fullName>
            </value>
            <value>
                <fullName>NACIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>