force-app/main/default/objects/Factura__c/fields/Tipo_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Documento__c</fullName>
    <label>Tipo Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>33</fullName>
                <label>FACTURA ELECTRÓNICA</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>FACTURA ELECTRÓNICA EXENTA</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>BOLETA ELECTRÓNICA</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>BOLETA ELECTRÓNICA EXENTA</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>FACTURA DE COMPRA</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>FACTURA DE COMPRA ELECTRÓNICA</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>GUÍA DE DESPACHO ELECTRÓNICA</label>
            </value>
            <value>
                <fullName>56</fullName>
                <label>NOTA DEBITO ELECTRÓNICA</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>NOTA DE CREDITO ELECTRÓNICA</label>
            </value>
            <value>
                <fullName>EXPORTACIONES COURIER</fullName>
                <isActive>false</isActive>
                <label>EXPORTACIONES COURIER</label>
            </value>
            <value>
                <fullName>FACTURA</fullName>
                <isActive>false</isActive>
                <label>FACTURA</label>
            </value>
            <value>
                <fullName>FACTURA EXENTA</fullName>
                <isActive>false</isActive>
                <label>FACTURA EXENTA</label>
            </value>
            <value>
                <fullName>IMPORTACIONES  IMPUESTOS</fullName>
                <isActive>false</isActive>
                <label>IMPORTACIONES  IMPUESTOS</label>
            </value>
            <value>
                <fullName>IMPORTACIONES FLETES</fullName>
                <isActive>false</isActive>
                <label>IMPORTACIONES FLETES</label>
            </value>
            <value>
                <fullName>IMPORTACIONES FLETES Y GASTOS TERMINALES</fullName>
                <isActive>false</isActive>
                <label>IMPORTACIONES FLETES Y GASTOS TERMINALES</label>
            </value>
            <value>
                <fullName>IMPUESTOS EN DESTINO</fullName>
                <isActive>false</isActive>
                <label>IMPUESTOS EN DESTINO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>