force-app/main/default/objects/Factura__c/fields/Total_Exento__c.field-meta.xml
<CustomField>
    <fullName>Total_Exento__c</fullName>
    <formula>Precio_Exento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Exento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>