force-app/main/default/objects/Factura__c/fields/Total_Iva__c.field-meta.xml
<CustomField>
    <fullName>Total_Iva__c</fullName>
    <formula>If(text(Iva__c )&lt;&gt;&apos;EXENTO&apos;,value(text(Iva__c ))* Total_Neto__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Iva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>