force-app/main/default/objects/Factura__c/fields/Total_Neto__c.field-meta.xml
<CustomField>
    <fullName>Total_Neto__c</fullName>
    <label>Total Neto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>