force-app/main/default/objects/Factura__c/fields/Valor_Dolar__c.field-meta.xml
<CustomField>
    <fullName>Valor_Dolar__c</fullName>
    <label>Valor Dolar</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>